[metadata]
name = conciliacion-bancaria
version = 0.1.0
author = Lionel Alan Choque
author_email = lionelchoque@gmail.com
description = Herramienta de conciliación bancaria
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LionelChoque/Conciliacion-excel
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src